# typstit

./: Cargo.toml
src/: api.rs  main.rs
src/cli/: add.rs  help.rs  install.rs  mod.rs  remove.rs  uninstall.rs  update.rs  utils.rs
src/cli/commands/: add.rs  help.rs  info.rs  install.rs  mod.rs  remove.rs  uninstall.rs  update.rs
src/core/: mod.rs  package.rs
src/git/: download_file.rs  mod.rs
